Add icon for opening the preview pane

--- a/package.json
+++ b/package.json
@@ -9,15 +9,27 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:scad"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
         "command": "embeddedopenscad.previewSCAD",
-        "title": "Preview SCAD"
+        "title": "Preview SCAD model to the Side",
+        "icon": "$(open-preview)"
       }
-    ]
+    ],
+    "menus": {
+      "editor/title": [
+        {
+          "when": "resourceExtname == .scad",
+          "command": "embeddedopenscad.previewSCAD",
+          "group": "navigation"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
